unpackaged/main/default/objects/CA_Manager__c/CA_Manager__c.object-meta.xml
<CustomObject>
    <description>This object would be used for autopopulating the email and phone numbers of the contacts of a record</description>
    <label>CA Manager</label>
    <nameField>
        <displayFormat>CAM-{00000}</displayFormat>
        <label>CA Manager Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>