unpackaged/main/default/objects/CA_Manager__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the person</description>
    <inlineHelpText>Email of the person</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>