unpackaged/main/default/objects/CA_Manager__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Enter the last name of the contact. If there are any middle names, Enter them here</description>
    <inlineHelpText>Enter the last name of the contact. If there are any middle names, Enter them here</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>