unpackaged/main/default/objects/CA_Manager__c/fields/Full_Name_Forward__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Forward__c</fullName>
    <description>Shows name as First Name Last Name</description>
    <formula>First_Name__c+&quot; &quot;+Last_Name__c</formula>
    <inlineHelpText>Shows name as First Name Last Name</inlineHelpText>
    <label>Full Name Forward</label>
    <type>Text</type>
</CustomField>