unpackaged/main/default/objects/CA_Manager__c/fields/Full_Name_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Reverse__c</fullName>
    <description>Shows name as Last Name, First Name</description>
    <formula>Last_Name__c+&quot;, &quot;+First_Name__c</formula>
    <inlineHelpText>Shows name as Last Name, First Name</inlineHelpText>
    <label>Full Name Reverse</label>
    <type>Text</type>
</CustomField>