unpackaged/main/default/objects/CA_Manager__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Enter the last name of the contact. If there are any middle names, do not enter them here</description>
    <inlineHelpText>Enter the last name of the contact. If there are any middle names, do not enter them here</inlineHelpText>
    <label>Last Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>