unpackaged/main/default/objects/CA_Manager__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number of the contact</description>
    <inlineHelpText>Phone number of the contact</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>